Fixed Spacing

--- a/family_crisis_center/scss/components/_image_blocks.scss
+++ b/family_crisis_center/scss/components/_image_blocks.scss
@@ -4,7 +4,7 @@
 .full-image .full-bg img{position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;z-index:-1;}
 
 /* Imager Combos Side by Side */
-.img-combo {display: grid; grid-template-columns: 1fr 1fr; gap: 25px; position: relative;min-height:200px}
+.img-combo {display: grid; grid-template-columns: 1fr 1fr; gap: 25px; position: relative;min-height:200px;margin-bottom: 50px;}
 .img-combo img {width:100%;height:100%;object-fit:cover;object-position: center;box-shadow: 0 10px 34px rgba(65, 63, 70, 0.15)}
 .img-combo img:nth-of-type(2) {margin: 50px 0 0 0;}
 
